[package]
name = "classcard-client"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-websockets = { version = "0.8.3", features = ["simd", "client", "native-tls", "getrandom", "sha1_smol"] }
