[package]
name = "classcard-client"
version = "1.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
futures-util = { version = "0.3.30", features = ["sink"] }
http = "1.1.0"
reqwest = { version = "0.12.5", default-features = false, features = ["http2", "charset"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-websockets = { version = "0.8.3", features = ["simd", "client", "getrandom", "sha1_smol"] }
rustls = { version = "0.23.12", optional = true }

[features]
default = ["native-tls"]
native-tls = ["tokio-websockets/native-tls", "reqwest/native-tls"]
rustls = ["dep:rustls", "tokio-websockets/rustls-webpki-roots", "tokio-websockets/rustls-tls12", "tokio-websockets/aws_lc_rs", "reqwest/rustls-tls"]